# ccremote

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/skills/: e2e-test.md
.github/workflows/: ci.yml  publish.yml
src/ccremote/: __init__.py  __main__.py  bot.py  cli.py  config.py  markdown.py  models.py  relay.py
tests/: CLAUDE.md  conftest.py
tests/contract/: test_config_schema.py
tests/e2e/: conftest.py  telegram_client.py  test_bot_connectivity.py
tests/unit/: test_commands.py  test_config.py  test_models.py  test_relay.py
