[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ccremote"
version = "0.1.0"
description = "Manage Claude Code sessions via Telegram"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.4",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.scripts]
ccremote = "ccremote.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "ty",
    "telethon>=1.36",
    "python-dotenv>=1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ccremote"]

[tool.ruff]
target-version = "py311"
line-length = 99
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--strict-markers -v"
markers = [
    "skipif: conditionally skip tests",
]

[tool.coverage.run]
source = ["ccremote"]

[tool.coverage.report]
fail_under = 50
show_missing = true
