[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ccremote"
version = "0.0.3"
description = "Manage Claude Code sessions via Telegram"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Nurikk", email = "nur.php@gmail.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Topic :: Communications :: Chat",
]

dependencies = [
    "aiogram>=3.4",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.urls]
Repository = "https://github.com/nurikk/ccremote"
Issues = "https://github.com/nurikk/ccremote/issues"

[project.scripts]
ccremote = "ccremote.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "ty",
    "telethon>=1.36",
    "python-dotenv>=1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ccremote"]

[tool.ruff]
target-version = "py311"
line-length = 99
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--strict-markers -v"
markers = [
    "skipif: conditionally skip tests",
]

[tool.coverage.run]
source = ["ccremote"]

[tool.coverage.report]
fail_under = 30
show_missing = true
